first draft: added spectral clustering implications and conclusion
+ various other fixes and improvements

--- a/paper/config.tex
+++ b/paper/config.tex
@@ -89,7 +89,7 @@
 
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily,breaklines=true}
-\usepackage{enumitem}
+\usepackage[inline]{enumitem}
 
 \usepackage{amsmath,amssymb}
 \usepackage{stmaryrd}
