--- a/paper/bib-refs.bib
+++ b/paper/bib-refs.bib
@@ -1,20 +1,22 @@
 % Encoding: UTF-8
 
 @InProceedings{Loukas2018,
-  author    = {Loukas, Andreas and Vandergheynst, Pierre},
-  title     = {Spectrally Approximating Large Graphs with Smaller Graphs},
-  booktitle = {Proceedings of the 35th International Conference on Machine Learning},
-  year      = {2018},
-  editor    = {Dy, Jennifer and Krause, Andreas},
-  volume    = {80},
-  series    = {Proceedings of Machine Learning Research},
-  pages     = {3237--3246},
-  address   = {Stockholmsmässan, Stockholm Sweden},
-  month     = {10--15 Jul},
-  publisher = {PMLR},
-  abstract  = {How does coarsening affect the spectrum of a general graph? We provide conditions such that the principal eigenvalues and eigenspaces of a coarsened and original graph Laplacian matrices are close. The achieved approximation is shown to depend on standard graph-theoretic properties, such as the degree and eigenvalue distributions, as well as on the ratio between the coarsened and actual graph sizes. Our results carry implications for learning methods that utilize coarsening. For the particular case of spectral clustering, they imply that coarse eigenvectors can be used to derive good quality assignments even without refinement{—}this phenomenon was previously observed, but lacked formal justification.},
-  pdf       = {http://proceedings.mlr.press/v80/loukas18a/loukas18a.pdf},
-  url       = {http://proceedings.mlr.press/v80/loukas18a.html},
+  author     = {Loukas, Andreas and Vandergheynst, Pierre},
+  title      = {Spectrally Approximating Large Graphs with Smaller Graphs},
+  booktitle  = {Proceedings of the 35th International Conference on Machine Learning},
+  year       = {2018},
+  editor     = {Dy, Jennifer and Krause, Andreas},
+  volume     = {80},
+  series     = {Proceedings of Machine Learning Research},
+  pages      = {3237--3246},
+  address    = {Stockholmsmässan, Stockholm Sweden},
+  month      = {10--15 Jul},
+  publisher  = {PMLR},
+  abstract   = {How does coarsening affect the spectrum of a general graph? We provide conditions such that the principal eigenvalues and eigenspaces of a coarsened and original graph Laplacian matrices are close. The achieved approximation is shown to depend on standard graph-theoretic properties, such as the degree and eigenvalue distributions, as well as on the ratio between the coarsened and actual graph sizes. Our results carry implications for learning methods that utilize coarsening. For the particular case of spectral clustering, they imply that coarse eigenvectors can be used to derive good quality assignments even without refinement{—}this phenomenon was previously observed, but lacked formal justification.},
+  eprint     = {1802.07510v1},
+  eprinttype = {arXiv},
+  pdf        = {http://proceedings.mlr.press/v80/loukas18a/loukas18a.pdf},
+  url        = {http://proceedings.mlr.press/v80/loukas18a.html},
 }
 
 @Article{Shuman2013,
@@ -28,6 +30,21 @@
   month     = {may},
   doi       = {10.1109/msp.2012.2235192},
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+}
+
+@Article{Luxburg2007,
+  author     = {Ulrike von Luxburg},
+  title      = {A tutorial on spectral clustering},
+  journal    = {Statistics and Computing},
+  year       = {2007},
+  volume     = {17},
+  number     = {4},
+  pages      = {395--416},
+  month      = {aug},
+  doi        = {10.1007/s11222-007-9033-z},
+  eprint     = {0711.0189v1},
+  eprinttype = {arXiv},
+  publisher  = {Springer Science and Business Media {LLC}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
