--- a/paper/main.tex
+++ b/paper/main.tex
@@ -17,7 +17,6 @@
 % Front matter
 % --------------------------
 \input{content/titlepages}
-\input{content/abstract}
 
 % --------------------------
 % Body matter
@@ -37,8 +36,7 @@
 \setlength{\bibitemsep}{0.5\baselineskip plus 0.5\baselineskip} % chktex 1
 \setcounter{biburllcpenalty}{9000}
 \setcounter{biburlucpenalty}{9999}
-\printbibliography[nottype=www]
-% \printbibliography[heading=subbibliography,title={Webpages},type=www]
+\printbibliography%
 }
 
 % **************************************************
