various draft improvements

--- a/paper/content/chapter-coarsening.tex
+++ b/paper/content/chapter-coarsening.tex
@@ -6,7 +6,7 @@
 
 We will now see how the size of a graph $G$ can be reduced via \textit{graph coarsening}.
 The resulting coarsened graph $G_c$ should ideally be structurally similar to $G$, i.e.\  it should have a similar spectrum.
-In this section we will first define the class of coarsening operators $C$ formally and give an intuition how they change the shape of a graph.
+In this section we will first define the class of coarsening operators $C$ and give an intuition on how they change the shape of a graph.
 Then we will describe a randomized algorithm to compute such a coarsening.
 
 \subsection{Definition of the Coarsening Operator}%
