--- a/paper/content/chapter-conclusion.tex
+++ b/paper/content/chapter-conclusion.tex
@@ -15,7 +15,7 @@ We have now discussed the three main topics of this paper:
 Based on the work we presented, there are two main open questions for future research:
 \begin{enumerate*}
 	\item The described RSS bound assumes a single application of the REC algorithm.
-		For multiple REC applications with a total reduction ratio of $r > \frac{1}{2}$, the RSS bound has to be adapted.
+		For multiple REC applications with a total reduction ratio of $r > \frac{1}{2}$, the RSS bound still needs to be generalized.
 	\item Currently the RSS bound has only been applied to the analysis of spectral clustering.
-		To make the results more generally applicable the implications for other graph algorithms, graph convolutional neural networks in particular, are considered by \citet{Loukas2018}.
+		To make the results more generally applicable, the implications for other graph algorithms, e.g.\ graph convolutional neural networks, are still to be considered.
 \end{enumerate*}
