--- a/paper/content/chapter-consequences.tex
+++ b/paper/content/chapter-consequences.tex
@@ -9,7 +9,7 @@ What remains to be answered now is how coarsening affects the performance of gra
 In the first step we will present a graph similarity measure.
 Using this measure we will then put bounds on the dissimilarity of $G$ and $G_c$.
 Finally we will use those bounds to analyze the influence of coarsening on the performance of the \textit{spectral clustering algorithm}.
-The results described in this section were first found by \citet{Loukas2018}.
+The results described in this section were found by \citet{Loukas2018}.
 
 \subsection{Restricted Spectral Similarity}%
 \label{sec:cons:rss}
@@ -17,7 +17,7 @@ The results described in this section were first found by \citet{Loukas2018}.
 To compare a graph $G$ with its coarsened version $G_c$ we will use the notion of \textit{spectral similarity}.
 As we have seen before, $G$ can be viewed as an operator that transforms an input signal $x \in \mathbb{R}^N$.
 We described this transform in terms of the graph's Laplacian $L$,
-more specifically in terms of the Laplacian's eigenbasis ${\{ u_k \}}_{1 \leq k \leq N}$ and spectrum ${\{ \lambda_k \}}_{1 \leq k \leq N}$.
+more specifically in terms of the Laplacian's eigenbasis ${\{ u_k \}}_{k = 1}^{N}$ and spectrum ${\{ \lambda_k \}}_{k = 1}^{N}$.
 Similarly the coarsened graph $G_c$ can be described in terms of its Laplacian $L_c$.
 Since $L \in \mathbb{R}^{N \times N}$ and $L_c \in \mathbb{R}^{n \times n}$ act on signal spaces of different dimensionality, they cannot be compared directly however.
 Instead we compare $L$ with $\widetilde{L} = C^{\top} L_c C$, the upsampled version of $L_c$.
@@ -40,7 +40,7 @@ Therefore the similarity condition is restricted to the first $K$ eigenvectors, 
 This restricted condition is called \textit{restricted spectral similarity} (RSS).
 
 The choice of $K$ in RSS depends on the level of detail that should be considered when comparing $L$ and $\widetilde{L}$.
-If $G$ has $c'$ clusters, i.e.\ connected subgraphs with relatively few edges going out of it, a choice of $K = c'$ is reasonable.
+If $G$ has $c'$ clusters, i.e.\ connected subgraphs with relatively few or even no edges going out of it, a choice of $K = c'$ is reasonable.
 That way RSS checks whether the clusters of $G$ are preserved in the coarsened graph $G_c$ and how much the connectedness between the clusters changes.
 Details like the connections within clusters on the other hand do not have a strong influence on the RSS similarity if $K = c'$, since they are described by the ``high-frequency'' eigenvectors $u_\ell$ of $L$ where $\ell > K$.
 
@@ -70,7 +70,7 @@ Here we will instead give an intuition for its key statements:
 		\begin{enumerate}[label=(\roman*)] % chktex 36
 			\item \textbf{Negative effect:}\label{itm:cons:bound:neg}
 				The eigenvector $u_k$ for a large $\lambda_k$ represents a ``high-frequency'' component of $G$ that is more easily distorted by coarsening than a smooth ``low-frequency'' eigenvector $u_\ell$ with eigenvalue $\lambda_{\ell \ll k}$ (see~\cref{fig:sgt:graphFourier}).
-				Formally this means that the approximated eigenvector $\widetilde{u}_k := \Pi u_k$ has a lower overlap with the original $u_k$ than $\widetilde{u}_\ell$ has with $u_\ell$, i.e.\ $\langle u_k, \widetilde{u}_k \rangle < \langle u_\ell, \widetilde{u}_\ell \rangle$.
+				Formally this means that the approximated eigenvector $\widetilde{u}_k := \Pi u_k$ has a lower overlap with the original $u_k$ than $\widetilde{u}_\ell$ has with its original $u_\ell$, i.e.\ $\langle u_k, \widetilde{u}_k \rangle < \langle u_\ell, \widetilde{u}_\ell \rangle$.
 				$\pmb{\Rightarrow}$ This effect causes the RSS probability bound to \textit{decrease} with increasing, more easily distorted, eigenvalues.
 			\item \textbf{Positive effect:}\label{itm:cons:bound:pos}
 				Recall that $u_k^\top \widetilde{L} u_k = \widetilde{u}_k^\top L \widetilde{u}_k$ and $\lambda_k = u_k^\top L u_k$.
@@ -117,15 +117,16 @@ Here we will instead give an intuition for its key statements:
 Lastly we will now evaluate the effect coarsening has on the performance of the \textit{spectral clustering algorithm}~\cite{Luxburg2007}.
 As we have seen in \cref{sec:sgt:spectrum}, the positive and negative vertex signal strengths of the Fiedler vector $u_2$ describe a $2$-clustering of the graph $G$ where the cluster boundary can be interpreted as a heat-flow bottleneck.
 This idea can be extended to the $K$-clustering scenario by considering the first $K$ eigenvectors $U_K = \{ u_2, \dots, u_K \}$ instead of only looking at $u_2$.
-To obtain a vertex clustering, the vertex basis vectors ${\{ b_i \}}_{1 \leq i \leq N}$ are projected onto the spectral basis $U_K$, i.e.\ the Fourier transform $\widehat{b}_i = {(\langle u_2, b_i \rangle, \dots, \langle u_K, b_i \rangle)}^\top$ is computed for each vertex.
-Afterwards regular $K$-means clustering is performed on the Fourier-transformed vertex basis ${\{\,\widehat{b}_i \}}_{1 \leq i \leq N}$ to get the clustering $S = (S_1, \dots, S_K)$ with $S_k \subseteq \mathcal{V}$.
+To obtain a vertex clustering, the vertex basis vectors ${\{ b_i \}}_{v_i \in \mathcal{V}}$ are projected onto the spectral basis $U_K$, i.e.\ the Fourier transform $\widehat{b}_i = {(\langle u_2, b_i \rangle, \dots, \langle u_K, b_i \rangle)}^\top$ is computed for each vertex.
+Afterwards regular $K$-means clustering is performed on the Fourier-transformed vertex basis ${\{\,\widehat{b}_i \}}_{v_i \in \mathcal{V}}$ to get the clustering $S = (S_1, \dots, S_K)$ with $S_k \subseteq \mathcal{V}$.
 
 For large graphs $G$, computing the eigenbasis $U_K$ of $L \in \mathbb{R}^{N \times N}$ is expensive.
-To speed this up, one can compute the eigenbasis $\widetilde{U}_K = \{ C^\top u'_2, \dots, C^\top u'_K \}$ instead, where $u'_k$ are the eigenvectors of the coarsened Laplacian $L_c \in \mathbb{R}^{n \times n}$.
-Since we want a clustering on the original vertex set $\mathcal{V}$, not the coarsened vertices $\mathcal{V}_c$, the coarse eigenvectors $u'_k \in \mathbb{R}^n$ need to be upsampled to $C^\top u'_k \in \mathbb{R}^N$, which is a cheap operation compared to finding the eigenvectors.
+To speed this up, one can compute the lower dimensional eigenbasis $\widetilde{U}_K = \{ C^\top u'_2, \dots, C^\top u'_K \}$ instead, where $u'_k$ are the eigenvectors of the coarsened Laplacian $L_c \in \mathbb{R}^{n \times n}$.
+Since we want a clustering on the original vertex set $\mathcal{V}$, not the coarsened vertices $\mathcal{V}_c$, the coarse eigenvectors $u'_k \in \mathbb{R}^n$ need to be upsampled to $C^\top u'_k \in \mathbb{R}^N$.
+In total this is often cheaper than computing $U_K$ directly.
 
-The question now is how much worse the spectral clustering results become when the vertex basis vectors ${\{ b_i \}}_{1 \leq i \leq N}$ are projected onto $\widetilde{U}_K$ instead of $U_K$.
-It was shown by \citet[Coroll.~5.1]{Loukas2018} that the RSS bound also implies a bound on the absolute spectral clustering error;
+The question now is how much worse the spectral clustering results become when the vertex basis vectors ${\{ b_i \}}_{v_i \in \mathcal{V}}$ are projected onto $\widetilde{U}_K$ instead of $U_K$.
+To answer this question, it was shown by \citet[Coroll.~5.1]{Loukas2018} that the RSS bound also implies a bound on the absolute spectral clustering error;
 therefore the intuitions we discussed in \cref{sec:cons:bound} also hold for spectral clustering.
 Most notably this implies that the absolute clustering error introduced by coarsening depends on the regularity of the graph, i.e.\ regular graphs are best suited to speed up spectral clustering via coarsening.
 \Cref{fig:cons:mnist} shows the relative performance decrease caused by coarsening for an exemplary regular graph.
